--- a/mlkit_demo/pubspec.yaml
+++ b/mlkit_demo/pubspec.yaml
@@ -33,7 +33,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons:  
+   
+  
+  google_ml_kit: ^0.7.2
+  image_picker: ^0.8.4+2
+  provider: ^6.0.0
+ 
 
 dev_dependencies:
   flutter_test:
